2003-05-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_fullscreen_toggle), (show_controls),
	(on_show_controls1_activate), (on_video_motion_notify_event):
	fix resizing of the widget when hiding/showing the controls

2003-05-19  Julien MOUTTE  <julien@moutte.net>

	* src/totem.c: (show_controls), (video_widget_create): Fixing a bug
	which was breaking the size request/allocate system of
	bacon_video_widget. Thanks to Kristian Rietveld <kris@gtk.org>.
	* src/vanity.c: (video_widget_create): Same here.

2003-05-18  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* configure.in: added dependency on gnome-desktop
	* src/gtk-playlist.c: (gtk_playlist_add_desktop),
	(gtk_playlist_add_mrl): we can now read the links .desktop files
	that we create when drag and dropping the video widget

2003-05-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_create_full_path), (totem_action_open_files):
	work-around another egg-recent bug wrt. local filenames

2003-05-18  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_size_request),
	(bacon_video_widget_size_allocate): Adding debug for fixing the
	allocation problem
	* src/gstvideowidget.c: (gst_video_widget_expose),
	(gst_video_widget_size_request), (gst_video_widget_allocate): Fixed
	some bugs with minimum size and putting some debug for allocation
	problem
	* src/totem.c: (totem_action_fullscreen_toggle),
	(video_widget_create): Added a name to bvw, changed fullscreen
	behaviour to disbable auto_resize

2003-05-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: really fix --disable-lirc
	* src/totem.c: (totem_create_full_path), (totem_is_media),
	(update_media_menu_items): fix playback of dvds, and all

2003-05-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: added a --disable-lirc option for packagers

2003-05-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fixed a warning, and make sure that Linux systems