@@ -1,3 +1,9 @@
+2003-05-20  Julien MOUTTE  <julien@moutte.net>
+
+	* src/totem.c: (totem_action_fullscreen_toggle), (show_controls),
+	(on_show_controls1_activate): Fixed hide/show controls and fullscreen
+	the nice way. (At last...)
+
 2003-05-19  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem.c: (totem_action_fullscreen_toggle), (show_controls),
